# retrospectr

./: .coveragerc  LICENSE.md  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: flake.yml  run-tests.yml
htmlcov/: d_1efa61855f3c66cf___init___py.html  d_1efa61855f3c66cf_importance_weights_py.html  d_1efa61855f3c66cf_resampling_py.html  index.html  status.json
retrospectr/: __init__.py  importance_weights.py  resampling.py
test/: generate_test_data.py  test_importance_weights.py  test_resample.py
test/test_models/eight_schools/: LICENSE.md  eight_schools.bad_data.json  eight_schools.data.json  eight_schools.new_data.json  eight_schools_logProbs.npy  eight_schools_log_weights.npy  eight_schools_new_samples.npy  eight_schools_resampled_samples.npy  eight_schools_samples.npy  seven_schools.data.json  seven_schools_samples.npy
