[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "retrospectr"
authors = [
    {name = "Alex Phillips", email = "A.M.Phillips@liverpool.ac.uk"},
]
description = "Importance weights for Stan models in python"
readme = "README.md"
dynamic = ["version"]

[project.urls]
"Repository" = "https://github.com/UoL-SignalProcessingGroup/retrospectr"

[tool.setuptools_scm]
